--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,12 +3,12 @@
   --text-color: #6c757d;
   --accent-color: #ffd333;
   --contrast-color: #3d464d;
-  --gray-color:#ccc;
+  --gray-color: #ccc;
 }
 
 html,
 body {
-    margin: 0 5px;
+  margin: 0 5px;
   height: 100%;
 }
 
@@ -19,46 +19,47 @@ body {
   color: var(--text-color);
 }
 
-a{
-    color: var(--text-color);
-    text-decoration: underline;
+a {
+  color: var(--text-color);
+  text-decoration: underline;
 }
 
-a:hover{
-    text-decoration: none;
+a:hover {
+  text-decoration: none;
 }
 
-img{
-    max-width: 100%;
-    height: auto;
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.btn, .dropdown-menu, .form-control{
-    border-radius: 0;
+.btn,
+.dropdown-menu,
+.form-control {
+  border-radius: 0;
 }
 
-.form-control:focus{
+.form-control:focus {
   color: var(--text-color);
   border-color: var(--accent-color);
   box-shadow: none;
 }
-.form-control::placeholder{
+.form-control::placeholder {
   color: var(--gray-color);
 }
-.btn-warning{
+.btn-warning {
   background-color: var(--accent-color);
   color: var(--contrast-color);
 }
 
-.btn-outline-warning{
+.btn-outline-warning {
   border-color: var(--accent-color);
-
 }
-.bg-warning{
-background-color: var(--accent-color) !important;
+.bg-warning {
+  background-color: var(--accent-color) !important;
 }
 
-.btn-outline-warning:hover{
+.btn-outline-warning:hover {
   background-color: var(--accent-color);
   color: var(--contrast-color);
 }
@@ -72,17 +73,41 @@ main.main {
   flex: 1 1 auto;
 }
 
+.section {
+  padding: 50px 0;
+}
 
+.section-title {
+  position: relative;
+  text-transform: uppercase;
+  color: var(--contrast-color);
+  font-weight: 700;
+}
 
-.header-top-phone a{
-text-decoration: none;
+.section-title span{
+background-color: var(--bg-color);
+padding-right: 1rem;
 
 }
 
-.header-top-phone a:hover{
-    text-decoration: underline;
-    
-    }
+.section-title::after {
+  position: absolute;
+  content: "";
+  /* height: 0; */
+  width: 100%;
+  top: 50%;
+  left: 0;
+  border-top: 1px dashed var(--text-color);
+  z-index: -1;
+}
+
+.header-top-phone a {
+  text-decoration: none;
+}
+
+.header-top-phone a:hover {
+  text-decoration: underline;
+}
 
 ul.social-icons {
   list-style: none;
@@ -109,80 +134,107 @@ ul.social-icons a {
 }
 
 ul.social-icons a:hover {
-   background-color: var(--contrast-color);
-   color: var(--accent-color);
+  background-color: var(--contrast-color);
+  color: var(--accent-color);
 }
 
 .header-top .btn {
-    background-color: #fff;
-
+  background-color: #fff;
 }
 
-.header-logo{
+.header-logo {
   text-decoration: none;
   text-transform: uppercase;
   color: var(--accent-color);
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
-.header-logo:hover{
+.header-logo:hover {
   color: var(--contrast-color);
 }
 
-.cart-buttons .btn{
+.cart-buttons .btn {
   color: var(--contrast-color);
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
-.cart-buttons .btn:hover{
+.cart-buttons .btn:hover {
   border: 1px solid var(--contrast-color);
 }
 
-.header-bottom{
+.header-bottom {
   border-top: 3px solid var(--accent-color);
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
-
 }
 .header-bottom .navbar,
-.header-bottom .navbar .dropdown-menu{
-
-background-color: var(--contrast-color) !important;
+.header-bottom .navbar .dropdown-menu {
+  background-color: var(--contrast-color) !important;
 }
-.header-bottom .nav-item:first-child .nav-link{
+.header-bottom .nav-item:first-child .nav-link {
   padding-left: 0;
 }
-.header-bottom .navbar .nav-link{
+.header-bottom .navbar .nav-link {
   color: #fff;
   transition: 0.3s all;
   letter-spacing: 0.1rem;
-
 }
 
-.header-bottom .navbar .nav-link:hover{
+.header-bottom .navbar .nav-link:hover {
   color: var(--accent-color);
+}
+
+.header-bottom .navbar .dropdown-menu {
+  margin-top: 7px;
+}
+/* =========Main======== */
+.carousel-caption {
+  text-shadow: 0 0 2px rgba(0, 0, 0, 1);
+}
+
+.carousel-caption p {
+  font-size: 1.5rem;
+}
+
+.advantages .items{
+  margin-top: 50px;
+}
+
+.advantages .items .item{
+  background-color: #fff;
+text-align: center;
+padding: 1rem;
+display: flex;
+flex-direction: column;
+height: 100%;
+transition: all 0.3s;
 
 }
 
-.header-bottom .navbar .dropdown-menu{
-margin-top: 7px;
+.advantages .items .item:hover{
+box-shadow: 0 15px 30px -20px rgba(0, 0, 0, 0.5);
 }
 
-@media only screen and (min-width: 992px){
-  .header-bottom .navbar .dropdown-menu-end{
+.advantages i{
+  font-size: 70px;
+  color: var(--accent-color);
+  margin-right: 1rem;
+}
+
+
+/* =========Main=end======= */
+
+@media only screen and (min-width: 992px) {
+  .header-bottom .navbar .dropdown-menu-end {
     margin-left: 0;
     border: 0;
-
   }
-  .header-bottom .navbar .nav-link{
-  padding: 1rem;
-  }
-}
-
-@media only screen and (max-width: 992px){
-  .header-bottom .navbar .dropdown-menu{
-   padding-left: 1rem;
-
+  .header-bottom .navbar .nav-link {
+    padding: 1rem;
   }
 }
 
-
+@media only screen and (max-width: 992px) {
+  .header-bottom .navbar .dropdown-menu {
+    padding-left: 1rem;
+  }
+}
